archive non-world data as well